# vendor_beken

./: EULA  OAT.xml  README.en.md  README.md  README_zh.md
test_xts_part1/: BUILD.gn  config.json
test_xts_part1/hals/harmonyos_connect/: harmonyos_connect.gni
test_xts_part1/hals/harmonyos_connect/hilinksdk/adapter/: BUILD.gn
test_xts_part1/hals/harmonyos_connect/hilinksdk/adapter/include/: hilink_open_ota_mcu_adapter.h
test_xts_part1/hals/harmonyos_connect/kitframework/adapter/src/: oem_auth_config.c
test_xts_part1/hals/utils/sys_param/: BUILD.gn
test_xts_part2/: BUILD.gn  config.json
test_xts_part2/hals/harmonyos_connect/hilinksdk/adapter/include/: hilink_open_ota_adapter.h
test_xts_part2/hals/harmonyos_connect/hilinksdk/adapter/src/: hilink_open_ota_mcu_adapter.c
test_xts_part2/hals/harmonyos_connect/kitframework/adapter/: BUILD.gn
test_xts_part2/hals/harmonyos_connect/kitframework/adapter/include/: kitframework_client.h
test_xts_part2/hals/harmonyos_connect/kitframework/adapter/src/: oem_auth_result_storage.c
test_xts_part2/hals/utils/sys_param/: BUILD.gn  hal_sys_param.c
test_xts_part2/hals/utils/token/: BUILD.gn  hal_token.c
wifi_bk7235/: BUILD.gn  config.json  ohos.build
wifi_bk7235/hals/harmonyos_connect/hilinksdk/adapter/src/: hilink_open_ota_adapter.c
wifi_bk7235/hals/harmonyos_connect/kitframework/adapter/include/: oem_auth_config.h  oem_auth_result_storage.h
wifi_bk7235/hals/utils/sys_param/: BUILD.gn  hal_sys_param.c
wifi_bk7235/hals/utils/token/: BUILD.gn  hal_token.c
wifi_bk7235/kernel_configs/: debug.config
wifi_iot/: BUILD.gn  config.json  patch.yml
wifi_iot/hals/utils/sys_param/: BUILD.gn  hal_sys_param.c
wifi_iot/hals/utils/token/: BUILD.gn  hal_token.c
wifi_iot/patches/: base.patch  bounds_checking_function.patch  build.patch  cJSON.patch  cmsis.patch  foundation.patch  kernel.patch  mbedtls.patch  musl.patch  test.patch  unity.patch  utils.patch
xts_demo/: BUILD.gn  config.json  ohos.build
xts_demo/hals/utils/sys_param/: BUILD.gn  hal_sys_param.c
xts_demo/hals/utils/token/: BUILD.gn  hal_token.c
xts_demo/kernel_configs/: debug.config
