# Copyright (C) 2022 Beken Corporation
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("wifi_bk7235") {
  deps = [

    "//test/xts/tools/lite/hctest:hctest",
    "//drivers/hdf_core/adapter/khdf/liteos_m:hdf_lite",
    "//device/board/beken/bk7235x/hcs:hdf_hcs",
    "//device/board/beken/bk7235x/hdf:bk_hdf_driver",
    "//drivers/hdf_core/adapter/khdf/liteos_m/core:hdf_core",
    "//drivers/hdf_core/adapter/khdf/liteos_m/osal:hdf_osal_lite",
  ]
}

