# Copyright (C) 2022 BEKEN .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("${board_adapter_dir}/hals/sdk_dir.gni")

static_library("hal_token_static") {
  sources = [ "hal_token.c" ]

  include_dirs = [
    "//base/startup/syspara_lite/hals",
    "//utils/native/lite/include",
    "${beken_sdk_dir}/include",
    "${beken_sdk_dir}/include/arch/compiler",
    "${beken_sdk_dir}/components/bk_cli/include",
    "${beken_sdk_dir}/components/bk_cli/include/bk_private",
    "//utils/native/lite/hals/file",
    "//applications/iot_solution/thing_model/WiFi",

  ]
  include_dirs += bk_hal_include_dirs

  deps = []
}
