#import("//applications/iot_solution/device.gni")

oem_common_deps = [
#  "//build/lite/config/component/cJSON:cjson_shared",
#  "//third_party/mbedtls:mbedtls_shared",
]

config("oem_common_config") {
  include_dirs = [
    "include",
    "//third_party/bounds_checking_function/include",
    "//third_party/cJSON/",
    "//third_party/mbedtls/include",
    "//kernel/liteos_m/components/bounds_checking_function/include",
    "//utils/native/lite/include",
   # "//device/asr/asr582x/drivers/kv/include/",
  ]
  defines = []
}

static_library("oem_auth_result_storage") {
  sources = [ "src/oem_auth_result_storage.c" ]
  configs += [ ":oem_common_config" ]
  deps = oem_common_deps
}

static_library("oem_auth_config") {
  sources = [ "src/oem_auth_config.c" ]
  configs += [ ":oem_common_config" ]
  deps = oem_common_deps
}